--- a/buy-a-car.htm
+++ b/buy-a-car.htm
@@ -15,7 +15,7 @@
         <nav class="container mx-auto flex justify-between items-center">
             <a href="#" class="text-2xl font-bold">Mawater 974</a>
             <ul class="flex space-x-6">
-                <li><a href="#" class="hover:text-gray-400">Home</a></li>
+                <li><a href="index.htm" class="hover:text-gray-400">Home</a></li>
                 <li><a href="buy-a-car.htm" class="hover:text-gray-400">Buy A Car</a></li>
                 <li><a href="#" class="hover:text-gray-400">Sell A Car</a></li>
                 <li><a href="rent-a-car.htm" class="hover:text-gray-400">Rent A Car</a></li>
