--- a/buy-a-car.htm
+++ b/buy-a-car.htm
@@ -12,9 +12,14 @@
 </head>
 <body class="bg-gray-900 text-white">
     <header class="bg-gray-800 py-4 shadow-lg">
-        <nav class="container mx-auto flex justify-between items-center">
-            <a href="#" class="text-2xl font-bold">Mawater 974</a>
-            <ul class="flex space-x-6">
+    <nav class="container mx-auto flex justify-between items-center">
+        <a href="#" class="flex items-center space-x-3">
+            <!-- Logo Image -->
+            <img src="logo.png" alt="Logo" class="w-12 h-12">
+            <!-- Website Name -->
+            <span class="text-2xl font-bold">Mawater 974</span>
+        </a>
+        <ul class="flex space-x-6">
                 <li><a href="index.html" class="hover:text-gray-400">Home</a></li>
                 <li><a href="buy-a-car.htm" class="hover:text-gray-400">Buy A Car</a></li>
                 <li><a href="#" class="hover:text-gray-400">Sell A Car</a></li>
@@ -22,21 +27,21 @@
                 <li><a href="#" class="hover:text-gray-400">Spare Parts</a></li>
                 <li><a href="#" class="hover:text-gray-400">Car Photography</a></li>
                 <li><a href="#" class="hover:text-gray-400">Showrooms</a></li>
-            </ul>
-            <div class="flex items-center space-x-4">
-                <button id="loginBtn" class="bg-blue-600 text-white px-4 py-2 rounded-full hover:bg-blue-700 transition">
-                    Login
-                </button>
-                <button id="registerBtn" class="border border-blue-600 text-blue-600 px-4 py-2 rounded-full hover:bg-blue-50 transition">
-                    Create Account
-                </button>
-                <!-- Settings Button -->
-                <button id="settingsBtn" class="text-blue-600 hover:text-blue-900 transition">
-                    <i class="fas fa-cogs text-2xl"></i>
-                </button>
-            </div>
-        </nav>
-    </header>
+        </ul>
+        <div class="flex items-center space-x-4">
+            <button id="loginBtn" class="bg-blue-600 text-white px-4 py-2 rounded-full hover:bg-blue-700 transition">
+                Login
+            </button>
+            <button id="registerBtn" class="border border-blue-600 text-blue-600 px-4 py-2 rounded-full hover:bg-blue-50 transition">
+                Create Account
+            </button>
+            <!-- Settings Button -->
+            <button id="settingsBtn" class="text-blue-600 hover:text-blue-900 transition">
+                <i class="fas fa-cogs text-2xl"></i>
+            </button>
+        </div>
+    </nav>
+</header>
     
     <main>
         <section class="py-16 bg-gradient-to-r from-blue-900 to-purple-900">
