--- a/index.html
+++ b/index.html
@@ -1,42 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mawater 974 - Future of Mobility</title>
-     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.16/tailwind.min.css">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body class="bg-gray-900 text-white">
-    <header class="bg-gray-800 py-4 shadow-lg">
-        <nav class="container mx-auto flex justify-between items-center">
-            <a href="#" class="text-2xl font-bold">Mawater 974</a>
-            <ul class="flex space-x-6">
-                <li><a href="#" class="hover:text-gray-400">Home</a></li>
-                <li><a href="buy-a-car.htm" class="hover:text-gray-400">Buy A Car</a></li>
-                <li><a href="#" class="hover:text-gray-400">Sell A Car</a></li>
-                <li><a href="rent-a-car.htm" class="hover:text-gray-400">Rent A Car</a></li>
-                <li><a href="#" class="hover:text-gray-400">Spare Parts</a></li>
-                <li><a href="#" class="hover:text-gray-400">Car Photography</a></li>
-                <li><a href="#" class="hover:text-gray-400">Showrooms</a></li>
-            </ul>
-            <div class="flex items-center space-x-4">
-                <button id="loginBtn" class="bg-blue-600 text-white px-4 py-2 rounded-full hover:bg-blue-700 transition">
-                    Login
-                </button>
-                <button id="registerBtn" class="border border-blue-600 text-blue-600 px-4 py-2 rounded-full hover:bg-blue-50 transition">
-                    Create Account
-                </button>
-                <!-- Settings Button -->
-                <button id="settingsBtn" class="text-blue-600 hover:text-blue-900 transition">
-                    <i class="fas fa-cogs text-2xl"></i>
-                </button>
-            </div>
-        </nav>
-    </header>
+href="buy-a-car.htm" 
 
     <main>
         <section class="hero py-24 bg-gradient-to-r from-blue-900 to-purple-900">
