--- a/insights secction.htm
+++ b/insights secction.htm
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mawater 974 - Future of Mobility</title>
-     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.16/tailwind.min.css">
@@ -12,37 +12,31 @@
 </head>
 <body class="bg-gray-900 text-white">
     <header class="bg-gray-800 py-4 shadow-lg">
-    <nav class="container mx-auto flex justify-between items-center">
-        <a href="#" class="flex items-center space-x-3">
-            <!-- Logo Image -->
-            <img src="logo.png" alt="Logo" class="w-12 h-12">
-            <!-- Website Name -->
-            <span class="text-2xl font-bold">Mawater 974</span>
-        </a>
-        <ul class="flex space-x-6">
-                <li><a href="index.html" class="hover:text-gray-400">Home</a></li>
-                <li><a href="buy-a-car.htm" class="hover:text-gray-400">Buy A Car</a></li>
+        <nav class="container mx-auto flex justify-between items-center">
+            <a href="#" class="text-2xl font-bold">Mawater 974</a>
+            <ul class="flex space-x-6">
+                <li><a href="#" class="hover:text-gray-400">Home</a></li>
+                <li><a href="#" class="hover:text-gray-400">Buy A Car</a></li>
                 <li><a href="#" class="hover:text-gray-400">Sell A Car</a></li>
-                <li><a href="rent-a-car.htm" class="hover:text-gray-400">Rent A Car</a></li>
+                <li><a href="#" class="hover:text-gray-400">Car Rental</a></li>
                 <li><a href="#" class="hover:text-gray-400">Spare Parts</a></li>
                 <li><a href="#" class="hover:text-gray-400">Car Photography</a></li>
                 <li><a href="#" class="hover:text-gray-400">Showrooms</a></li>
-        </ul>
-        <div class="flex items-center space-x-4">
-            <button id="loginBtn" class="bg-blue-600 text-white px-4 py-2 rounded-full hover:bg-blue-700 transition" onclick="window.location.href='login-page.htm'">
-    Login
-</button>
-
-            <button id="registerBtn" class="border border-blue-600 text-blue-600 px-4 py-2 rounded-full hover:bg-blue-50 transition">
-                Create Account
-            </button>
-            <!-- Settings Button -->
-            <button id="settingsBtn" class="text-blue-600 hover:text-blue-900 transition">
-                <i class="fas fa-cogs text-2xl"></i>
-            </button>
-        </div>
-    </nav>
-</header>
+            </ul>
+            <div class="flex items-center space-x-4">
+                <button id="loginBtn" class="bg-blue-600 text-white px-4 py-2 rounded-full hover:bg-blue-700 transition">
+                    Login
+                </button>
+                <button id="registerBtn" class="border border-blue-600 text-blue-600 px-4 py-2 rounded-full hover:bg-blue-50 transition">
+                    Create Account
+                </button>
+                <!-- Settings Button -->
+                <button id="settingsBtn" class="text-blue-600 hover:text-blue-900 transition">
+                    <i class="fas fa-cogs text-2xl"></i>
+                </button>
+            </div>
+        </nav>
+    </header>
 
     <main>
         <section class="hero py-24 bg-gradient-to-r from-blue-900 to-purple-900">
@@ -229,8 +223,44 @@
             </div>
         </section>
 
+        <!-- Market Insights Section -->
+        <section class="market-insights py-16 bg-gray-800">
+            <div class="container mx-auto py-16 px-4 text-center">
+                <h3 class="text-3xl font-bold text-gray-50">Market Insights</h3>
+                <p class="text-gray-60 mt-4">Car market analysis and statistics</p>
+                <div class="bg-white rounded-lg shadow-lg p-8">
+                    <canvas id="marketChart" height="300"></canvas>
+                </div>
+            </div>
+        </section>
+        
+        <script>
+            // Market Insights Chart
+            var ctx = document.getElementById('marketChart').getContext('2d');
+            var marketChart = new Chart(ctx, {
+                type: 'line',
+                data: {
+                    labels: ['January', 'February', 'March', 'April', 'May', 'June'],
+                    datasets: [{
+                        label: 'Car Sales',
+                        data: [12, 19, 3, 5, 2, 3],
+                        borderColor: 'rgb(75, 192, 192)',
+                        tension: 0.1
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    plugins: {
+                        legend: {
+                            display: false
+                        }
+                    }
+                }
+            });
+        </script>
+
         <!-- Contact Section -->
-        <section id="contact" class="bg-gray-800 text-white py-16">
+        <section id="contact" class="bg-gray-900 text-white py-16">
             <div class="container mx-auto px-4 text-center">
                 <h3 class="text-3xl font-bold mb-6">Contact Us</h3>
                 <p class="text-gray-400 mb-10 max-w-2xl mx-auto">We are here to help. Reach out to us via the form below or through our contact information</p>
@@ -247,48 +277,48 @@
             </div>
         </section>
 
-        <!-- Footer -->
-        <footer class="bg-gray-900 text-white py-12">
-            <div class="container mx-auto px-4">
-                <div class="grid md:grid-cols-4 gap-8">
-                    <div>
-                        <h5 class="text-xl font-bold mb-4">Mawater 974</h5>
-                        <p class="text-gray-400">"Ride In Style"</p>
-                    </div>
-                    <div>
-                        <h5 class="text-xl font-bold mb-4">Quick Links</h5>
-                        <ul>
-                            <li><a href="#" class="text-gray-400 hover:text-white">Home</a></li>
-                            <li><a href="#" class="text-gray-400 hover:text-white">Cars</a></li>
-                            <li><a href="#" class="text-gray-400 hover:text-white">Services</a></li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h5 class="text-xl font-bold mb-4">Contact</h5>
-                        <p class="text-gray-400">+974 55555555</p>
-                        <p class="text-gray-400">info@Mawater974.com</p>
-                    </div>
-                    <div>
-                        <h5 class="text-xl font-bold mb-4">Follow Us</h5>
-                        <div class="flex space-x-4">
-                            <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-twitter"></i></a>
-                            <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-instagram"></i></a>
-                            <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-snapchat"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- New Footer Content -->
-                <div class="text-center mt-8">
-                    <p>&copy; 2024 Mawater 974 | All Rights Reserved</p>
-                    <p>
-                        <a href="privacy.html" class="text-gray-400 hover:text-white">Privacy Policy</a> |
-                        <a href="terms.html" class="text-gray-400 hover:text-white">Terms of Service</a>
-                    </p>
+<!-- Footer -->
+<footer class="bg-gray-900 text-white py-12">
+    <div class="container mx-auto px-4">
+        <div class="grid md:grid-cols-4 gap-8">
+            <div>
+                <h5 class="text-xl font-bold mb-4">Mawater 974</h5>
+                <p class="text-gray-400">"Ride In Style"</p>
+            </div>
+            <div>
+                <h5 class="text-xl font-bold mb-4">Quick Links</h5>
+                <ul>
+                    <li><a href="#" class="text-gray-400 hover:text-white">Home</a></li>
+                    <li><a href="#" class="text-gray-400 hover:text-white">Cars</a></li>
+                    <li><a href="#" class="text-gray-400 hover:text-white">Services</a></li>
+                </ul>
+            </div>
+            <div>
+                <h5 class="text-xl font-bold mb-4">Contact</h5>
+                <p class="text-gray-400">+974 55555555</p>
+                <p class="text-gray-400">info@Mawater974.com</p>
+            </div>
+            <div>
+                <h5 class="text-xl font-bold mb-4">Follow Us</h5>
+                <div class="flex space-x-4">
+                    <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-snapchat"></i></a>
                 </div>
             </div>
-        </footer>
+        </div>
+        
+        <!-- New Footer Content -->
+        <div class="text-center mt-8">
+            <p>&copy; 2024 Mawater 974 | All Rights Reserved</p>
+            <p>
+                <a href="privacy.html" class="text-gray-400 hover:text-white">Privacy Policy</a> |
+                <a href="terms.html" class="text-gray-400 hover:text-white">Terms of Service</a>
+            </p>
+        </div>
+    </div>
+</footer>
 
-        <script src="script.js"></script>
-    </main>
+    <script src="script.js"></script>
+</main>
 </html>
