--- a/login-page.htm
+++ b/login-page.htm
@@ -20,18 +20,19 @@
             <span class="text-2xl font-bold">Mawater 974</span>
         </a>
         <ul class="flex space-x-6">
-            <li><a href="#" class="hover:text-gray-400">Home</a></li>
-            <li><a href="#" class="hover:text-gray-400">Buy A Car</a></li>
-            <li><a href="#" class="hover:text-gray-400">Sell A Car</a></li>
-            <li><a href="#" class="hover:text-gray-400">Car Rental</a></li>
-            <li><a href="#" class="hover:text-gray-400">Spare Parts</a></li>
-            <li><a href="#" class="hover:text-gray-400">Car Photography</a></li>
-            <li><a href="#" class="hover:text-gray-400">Showrooms</a></li>
+                <li><a href="index.html" class="hover:text-gray-400">Home</a></li>
+                <li><a href="buy-a-car.htm" class="hover:text-gray-400">Buy A Car</a></li>
+                <li><a href="#" class="hover:text-gray-400">Sell A Car</a></li>
+                <li><a href="rent-a-car.htm" class="hover:text-gray-400">Rent A Car</a></li>
+                <li><a href="#" class="hover:text-gray-400">Spare Parts</a></li>
+                <li><a href="#" class="hover:text-gray-400">Car Photography</a></li>
+                <li><a href="#" class="hover:text-gray-400">Showrooms</a></li>
         </ul>
         <div class="flex items-center space-x-4">
-            <button id="loginBtn" class="bg-blue-600 text-white px-4 py-2 rounded-full hover:bg-blue-700 transition">
-                Login
-            </button>
+            <button id="loginBtn" class="bg-blue-600 text-white px-4 py-2 rounded-full hover:bg-blue-700 transition" onclick="window.location.href='login-page.htm'">
+    Login
+</button>
+
             <button id="registerBtn" class="border border-blue-600 text-blue-600 px-4 py-2 rounded-full hover:bg-blue-50 transition">
                 Create Account
             </button>
